[gd_scene load_steps=8 format=3 uid="uid://dbe7j8b23vftu"]

[ext_resource type="Script" uid="uid://bniou8lp8h2os" path="res://scenes/tooltips/unit_tooltip.gd" id="1_utit8"]
[ext_resource type="PackedScene" uid="uid://unne35x1mlsa" path="res://scenes/tier_icon/tier_icon.tscn" id="1_uyrn0"]
[ext_resource type="PackedScene" uid="uid://di1627tggvh6r" path="res://scenes/health_bar/health_bar.tscn" id="2_utit8"]
[ext_resource type="FontFile" uid="uid://8di0jvr25vat" path="res://assets/font/m5x7.ttf" id="3_x7pa1"]
[ext_resource type="PackedScene" uid="uid://c7pf7qph33dgb" path="res://scenes/mana_bar/mana_bar.tscn" id="4_8xg88"]
[ext_resource type="PackedScene" uid="uid://ifhs2q8aymex" path="res://scenes/item_ui/item_ui.tscn" id="5_xrh0k"]

[sub_resource type="LabelSettings" id="LabelSettings_ktm3c"]
font = ExtResource("3_x7pa1")
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="UnitTooltip" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_utit8")

[node name="Title" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TierIcon" parent="Title" instance=ExtResource("1_uyrn0")]
unique_name_in_owner = true
layout_mode = 2

[node name="UnitName" type="Label" parent="Title"]
unique_name_in_owner = true
layout_mode = 2
text = "Bjorn"

[node name="HealthBar" parent="." instance=ExtResource("2_utit8")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="HealthLabel" type="Label" parent="HealthBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0/1000"
label_settings = SubResource("LabelSettings_ktm3c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ManaBar" parent="." instance=ExtResource("4_8xg88")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="ManaLabel" type="Label" parent="ManaBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "400/1000"
label_settings = SubResource("LabelSettings_ktm3c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Item1" parent="ItemContainer" instance=ExtResource("5_xrh0k")]
layout_mode = 2

[node name="Item2" parent="ItemContainer" instance=ExtResource("5_xrh0k")]
layout_mode = 2

[node name="Item3" parent="ItemContainer" instance=ExtResource("5_xrh0k")]
layout_mode = 2
